force-app/main/default/objects/Engaged_Team__c/Engaged_Team__c.object-meta.xml
<CustomObject>
    <label>Engaged Team</label>
    <nameField>
        <displayFormat>ET# {YY}{MM}{DD}-{00000}</displayFormat>
        <label>Engaged Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engaged Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>