force-app/main/default/objects/Engaged_Team__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Engaged Teams</relationshipLabel>
    <relationshipName>Engaged_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>