force-app/main/default/objects/Engaged_Team__c/fields/Project_Version__c.field-meta.xml
<CustomField>
    <fullName>Project_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Version</label>
    <referenceTo>Project_Version__c</referenceTo>
    <relationshipLabel>Engaged Teams</relationshipLabel>
    <relationshipName>Engaged_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>